--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -241,4 +241,9 @@
          rotations as the default behavior. -->
     <bool name="config_allowAllRotations">true</bool>
 
+    <!-- Required to enable activity on secondary display -->
+    <bool name="config_supportsMultiWindow">true</bool>
+    <!-- Required to support split screen multiwindow -->
+    <bool name="config_supportsSplitScreenMultiWindow">true</bool>
+
 </resources>
